# flask_extended_config

./: .gitignore  AUTHORS  LICENSE.txt  README.md  pyproject.toml  releases.md
src/flask_extended_config/: __init__.py  config.py  sqlalchemy_url.py  yaml_load.py
