[project]
name = "Flask-extended-config"
version = "1.0.5"
description = "Extended configuration using YAML files"
readme = "README.md"
authors = [{ name = "Marc Bertens-Nguyen", email = "m.bertens@pe2mbs.nl" }]
maintainers = [{ name = "Marc Bertens-Nguyen", email = "m.bertens@pe2mbs.nl" }]
license = "	GPL-2.0-only"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    "Framework :: Flask",
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0",
    "werkzeug>=2.0",
    "orjson",
    "pyyaml>=6.0"
]

[project.optional-dependencies]

[project.urls]
Documentation = "https://github.com/pe2mbs/flask-extended-config"
Changes = "https://github.com/pe2mbs/flask-extended-config/releases.md"
Source = "https://github.com/pe2mbs/flask-extended-config/"

